--- a/admin_parent/pom.xml
+++ b/admin_parent/pom.xml
@@ -7,10 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>admin_service</artifactId>
+    <artifactId>admin_parent</artifactId>
     <packaging>jar</packaging>
 
-    <name>admin_service</name>
+    <name>admin_parent</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -23,16 +23,6 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.click</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.click</groupId>
-            <artifactId>admin_parent</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
