--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>common</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+        <dependency>
+            <groupId>org.click</groupId>
+            <artifactId>admin_parent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
