--- a/admin_service/pom.xml
+++ b/admin_service/pom.xml
@@ -34,5 +34,11 @@
             <artifactId>admin_parent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
