--- a/sso/pom.xml
+++ b/sso/pom.xml
@@ -36,10 +36,15 @@
 
     <dependencies>
         <dependency>
-      <groupId>org.click</groupId>
-      <artifactId>common</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
+            <groupId>org.click</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.click</groupId>
+            <artifactId>sso_parent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
