--- a/common/src/main/resources/jdbc.properties
+++ b/common/src/main/resources/jdbc.properties
@@ -4,19 +4,19 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://47.88.77.83:3306/click?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=45683968
+jdbc.password=*****
 
 # data sql server 01
 d1.driver=com.mysql.jdbc.Driver
 d1.url=jdbc:mysql://47.88.77.83:3306/data1?useUnicode=true&characterEncoding=utf8
 d1.jdbc.username=root
-d1.jdbc.password=45683968
+d1.jdbc.password=*****
 
 # data sql server 02
 d2.driver=com.mysql.jdbc.Driver
 d2.url=jdbc:mysql://47.88.77.83:3306/data2?useUnicode=true&characterEncoding=utf8
 d2.jdbc.username=root
-d2.jdbc.password=45683968
+d2.jdbc.password=*****
 
 # c3p0 connection pool
 c3p0.maxPoolSize=30
