--- a/common/pom.xml
+++ b/common/pom.xml
@@ -8,6 +8,24 @@
     <groupId>org.click</groupId>
     <artifactId>common</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <repositories>
+        <repository>
+            <id>nexus</id>
+            <name>Nexus</name>
+            <url>http://47.88.77.83:8081/nexus/content/groups/public/</url>
+            <releases><enabled>true</enabled></releases>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>nexus</id>
+            <name>Nexus</name>
+            <url>http://47.88.77.83:8081/nexus/content/groups/public/</url>
+            <releases><enabled>true</enabled></releases>
+            <snapshots><enabled>true</enabled></snapshots>
+        </pluginRepository>
+    </pluginRepositories>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -249,6 +267,19 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
             <version>2.4.2</version>
+        </dependency>
+
+        <!--ttest-->
+        <dependency>
+            <groupId>org.nero.click.math</groupId>
+            <artifactId>buildertool</artifactId>
+            <version>1</version>
+            <classifier>2</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.nero.click.math</groupId>
+            <artifactId>ttest</artifactId>
+            <version>1</version>
         </dependency>
     </dependencies>
 </project>
